Add target blank

--- a/index.html
+++ b/index.html
@@ -436,6 +436,7 @@
                   class="download-fasciculo"
                   href="https://drive.google.com/open?id=1NpYlDlHc4jzpMD6UT-R6npBgevsSFVkF"
                   title="O MUDO FOFOQUEIRO"
+                  target="_blank"
                 >
                   <h2>
                     <div class="date">24/MAR/2020</div>
@@ -450,9 +451,10 @@
               <div>
                 <a
                   class="download-fasciculo"
-                  href="#ONOPOETOPEIA"
+                  href="#indisponivel"
                   title="ONOPOETOPÉIA"
                   onClick="alert('Esse Fascículo estará disponível a partir do dia 31/03/2020, se preferir cadastre-se e receba no seu email!')"
+                  target="_blank"
                 >
                   <h2>
                     <div class="date">31/MAR/2020</div>
