Add title var ga event

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                 <a
                   class="download-fasciculo"
                   href="#indisponivel"
-                  title="ONOPOETOPÉIA"
+                  title="ONOPOETOPÉIA - indisponivel"
                   onClick="alert('Esse Fascículo estará disponível a partir do dia 31/03/2020, se preferir cadastre-se e receba no seu email!')"
                   target="_blank"
                 >
