Fix size heading H1 and add opacity

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         color: rgb(153, 19, 19);
         line-height: 1.162;
         margin-top: 20vh;
+        opacity: 0.8;
       }
 
       h2 {
@@ -165,19 +166,11 @@
 
         h1 {
           font-size: 3rem;
-          font-family: "fabianestem-normal";
-          color: rgb(153, 19, 19);
-          line-height: 1.162;
           margin-top: 20vh;
         }
 
         h2 {
           font-size: 1rem;
-          font-family: "avenir-regular";
-          color: rgb(255, 255, 255);
-          text-transform: uppercase;
-          line-height: 1.162;
-          display: block;
         }
         iframe {
           display: block;
@@ -217,19 +210,11 @@
 
         h1 {
           font-size: 3rem;
-          font-family: "fabianestem-normal";
-          color: rgb(153, 19, 19);
-          line-height: 1.162;
           margin-top: 20vh;
         }
 
         h2 {
           font-size: 1rem;
-          font-family: "avenir-regular";
-          color: rgb(255, 255, 255);
-          text-transform: uppercase;
-          line-height: 1.162;
-          display: block;
         }
         iframe {
           display: block;
@@ -268,20 +253,11 @@
         }
 
         h1 {
-          font-size: 3rem;
-          font-family: "fabianestem-normal";
-          color: rgb(153, 19, 19);
-          line-height: 1.162;
-          margin-top: 20vh;
+          font-size: 4rem;
         }
 
         h2 {
           font-size: 1rem;
-          font-family: "avenir-regular";
-          color: rgb(255, 255, 255);
-          text-transform: uppercase;
-          line-height: 1.162;
-          display: block;
         }
         iframe {
           display: block;
@@ -320,20 +296,11 @@
         }
 
         h1 {
-          font-size: 3rem;
-          font-family: "fabianestem-normal";
-          color: rgb(153, 19, 19);
-          line-height: 1.162;
-          margin-top: 20vh;
+          font-size: 5rem;
         }
 
         h2 {
           font-size: 1rem;
-          font-family: "avenir-regular";
-          color: rgb(255, 255, 255);
-          text-transform: uppercase;
-          line-height: 1.162;
-          display: block;
         }
         iframe {
           display: block;
@@ -377,20 +344,11 @@
         }
 
         h1 {
-          font-size: 3rem;
-          font-family: "fabianestem-normal";
-          color: #991313;
-          line-height: 1.162;
-          margin-top: 20vh;
+          font-size: 5rem;
         }
 
         h2 {
           font-size: 1rem;
-          font-family: "avenir-regular";
-          color: rgb(255, 255, 255);
-          text-transform: uppercase;
-          line-height: 1.162;
-          display: block;
         }
         iframe {
           display: block;
