Optimize CSS and image weigth

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       }
 
       body {
-        background: url("./img/bg-pattern.png");
+        background: url("./img/bg-pattern-min.png");
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
@@ -95,6 +95,7 @@
       }
 
       h2 {
+        font-size: 1rem;
         font-family: "avenir-regular";
         color: rgb(255, 255, 255);
         text-transform: uppercase;
@@ -135,6 +136,24 @@
         margin: 50px 10px 100px 10px;
       }
 
+      iframe {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      footer {
+        position: fixed;
+        padding: 10px;
+        background-color: black;
+        font-family: "avenir-regular";
+        color: rgb(255, 255, 255);
+        bottom: 0%;
+      }
+      footer:hover {
+        color: rgb(153, 19, 19);
+      }
+
       /* Extra small devices (phones, 600px and down) */
       @media only screen and (max-width: 600px) {
         .collumn-grid:nth-child(1) {
@@ -172,10 +191,8 @@
         h2 {
           font-size: 1rem;
         }
+
         iframe {
-          display: block;
-          margin-left: auto;
-          margin-right: auto;
           width: 400px;
           height: 700px;
         }
@@ -217,9 +234,6 @@
           font-size: 1rem;
         }
         iframe {
-          display: block;
-          margin-left: auto;
-          margin-right: auto;
           width: 600px;
           height: 700px;
         }
@@ -260,9 +274,6 @@
           font-size: 1rem;
         }
         iframe {
-          display: block;
-          margin-left: auto;
-          margin-right: auto;
           width: 800px;
           height: 700px;
         }
@@ -303,9 +314,6 @@
           font-size: 1rem;
         }
         iframe {
-          display: block;
-          margin-left: auto;
-          margin-right: auto;
           width: 800px;
           height: 700px;
         }
@@ -351,23 +359,9 @@
           font-size: 1rem;
         }
         iframe {
-          display: block;
-          margin-left: auto;
-          margin-right: auto;
           width: 800px;
           height: 700px;
         }
-      }
-      footer {
-        position: fixed;
-        padding: 10px;
-        background-color: black;
-        font-family: "avenir-regular";
-        color: rgb(255, 255, 255);
-        bottom: 0%;
-      }
-      footer:hover {
-        color: rgb(153, 19, 19);
       }
     </style>
   </head>
@@ -383,7 +377,7 @@
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <div class="grid">
-      <div class="collumn-grid"><img class="bug" src="./img/up-bug.png" alt="ilha das formigas" /></div>
+      <div class="collumn-grid"><img class="bug" src="./img/up-bug-min.png" alt="ilha das formigas" /></div>
       <div class="collumn-grid">
         <div class="container">
           <h1>ilha<br />das<br />formigas</h1>
@@ -426,7 +420,7 @@
           </ul>
         </div>
       </div>
-      <div class="collumn-grid"><img class="bug" src="./img/down-bug.png" alt="ilha das formigas" /></div>
+      <div class="collumn-grid"><img class="bug" src="./img/down-bug-min.png" alt="ilha das formigas" /></div>
     </div>
     <iframe
       src="https://docs.google.com/forms/d/e/1FAIpQLSdbiDWZZt-ThpFzKcpJdgupWIHmLHBr517qlA6vYjODDJkr2g/viewform?embedded=true"
