Fix paths folders

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <meta property="twitter:title" content="Ilhas das Formigas" />
     <meta property="twitter:description" content="Ensaio artistico de Ariel Gricio" />
     <!-- <meta property="twitter:image" content=""> -->
-
+    <link rel="stylesheet" href="./assets/normalize.min.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
