Add version Espanhol

--- a/es.html
+++ b/es.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="es">
   <head>
     <!-- Google Tag Manager -->
     <script>
@@ -18,24 +18,24 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Language" content="pt-br" />
+    <meta http-equiv="Content-Language" content="es" />
     <!-- Primary Meta Tags -->
-    <title>Ilhas das Formigas</title>
-    <meta name="title" content="Ilhas das Formigas" />
-    <meta name="description" content="Ensaio artistico de Ariel Gricio" />
+    <title>Isla de Hormigas</title>
+    <meta name="title" content="Isla de hormigas" />
+    <meta name="description" content="Ensayo artístico de Ariel Gricio." />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ilhadasformigas.xyz/" />
-    <meta property="og:title" content="Ilhas das Formigas" />
-    <meta property="og:description" content="Ensaio artistico de Ariel Gricio" />
+    <meta property="og:url" content="https://es.ilhadasformigas.xyz/" />
+    <meta property="og:title" content="Isla de hormigas" />
+    <meta property="og:description" content="Ensayo artístico de Ariel Gricio." />
     <!-- <meta property="og:image" content=""> -->
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://ilhadasformigas.xyz/" />
-    <meta property="twitter:title" content="Ilhas das Formigas" />
-    <meta property="twitter:description" content="Ensaio artistico de Ariel Gricio" />
+    <meta property="twitter:title" content="Isla de hormigas" />
+    <meta property="twitter:description" content="Ensayo artístico de Ariel Gricio." />
     <!-- <meta property="twitter:image" content=""> -->
     <link rel="stylesheet" href="./assets/normalize.min.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
@@ -52,30 +52,30 @@
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <div class="grid">
-      <div class="collumn-grid"><img class="bug" src="./img/up-bug-min.png" alt="ilha das formigas" /></div>
+      <div class="collumn-grid"><img class="bug" src="./img/up-bug-min.png" alt="isla de hormigas" /></div>
       <div class="collumn-grid">
         <div class="container">
           <nav
             style="top: 50px;
           position: relative;"
           >
-            <a href="es.html"><img src="./img/spain-flag.png" alt="version en espanhol"/></a>
+            <a href="index.html"><img src="./img/brazil-flag.png" alt="version en português"/></a>
           </nav>
-          <h1>ilha<br />das<br />formigas</h1>
+          <h1>isla<br />de<br />hormigas</h1>
           <ul>
             <li>
               <div>
                 <a
                   class="download-fasciculo"
-                  href="https://drive.google.com/open?id=1NpYlDlHc4jzpMD6UT-R6npBgevsSFVkF"
-                  title="O MUDO FOFOQUEIRO"
+                  href="https://drive.google.com/file/d/12eUo4PgxpIEVA0po4IL4awMRgLS7Hi97"
+                  title="O MUDO CHISMOSO"
                   target="_blank"
                 >
                   <h2>
                     <div class="date">24/MAR/2020</div>
                     <div class="sub-title">Fascículo - 1</div>
-                    <div class="title">O MUDO FOFOQUEIRO</div>
-                    <div class="link-download">Clique aqui para baixar</div>
+                    <div class="title">O MUDO CHISMOSO</div>
+                    <div class="link-download">Haga clic aquí para descargar</div>
                   </h2>
                 </a>
               </div>
@@ -86,14 +86,14 @@
                   class="download-fasciculo"
                   href="#indisponivel"
                   title="ONOPOETOPÉIA - indisponivel"
-                  onClick="alert('Esse Fascículo estará disponível a partir do dia 31/03/2020, se preferir cadastre-se e receba no seu email!')"
+                  onClick="alert('¡Este número estará disponible a partir del 31/03/2020, si prefiere registrarse y recibirlo en su correo electrónico!')"
                   target="_blank"
                 >
                   <h2>
                     <div class="date">31/MAR/2020</div>
                     <div class="sub-title">Fascículo - 2</div>
                     <div class="title">ONOPOETOPÉIA</div>
-                    <div class="link-download">Clique aqui para baixar</div>
+                    <div class="link-download">Haga clic aquí para descargar</div>
                   </h2>
                 </a>
               </div>
@@ -101,7 +101,7 @@
           </ul>
         </div>
       </div>
-      <div class="collumn-grid"><img class="bug" src="./img/down-bug-min.png" alt="ilha das formigas" /></div>
+      <div class="collumn-grid"><img class="bug" src="./img/down-bug-min.png" alt="isla de hormigas" /></div>
     </div>
     <iframe
       src="https://docs.google.com/forms/d/e/1FAIpQLSdbiDWZZt-ThpFzKcpJdgupWIHmLHBr517qlA6vYjODDJkr2g/viewform?embedded=true"
@@ -111,7 +111,9 @@
       >Carregando…</iframe
     >
     <footer>
-      <p>Todo o conteúdo desse ensaio é de autoria de Ariel Gricio. Pode espalhar, mas cite a fonte, por favor! ;)</p>
+      <p>
+        Todo el contenido de este ensayo está escrito por Ariel Gricio. Puede difundirlo, pero cite la fuente, por favor. ;)
+      </p>
     </footer>
   </body>
 </html>
