--- a/es.html
+++ b/es.html
@@ -39,6 +39,25 @@
     <!-- <meta property="twitter:image" content=""> -->
     <link rel="stylesheet" href="./assets/normalize.min.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
+
+    <!-- <FavIcons> -->
+    <link rel="apple-touch-icon" sizes="57x57" href="./favicon/img/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="./favicon/img/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="./favicon/img/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="./favicon/img/apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="./favicon/img/apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="./favicon/img/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="./favicon/img/apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="./favicon/img/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/img/apple-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="./favicon/img/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/img/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="./favicon/img/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/img/favicon-16x16.png" />
+    <link rel="manifest" href="./favicon/img/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="./favicon/img/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
@@ -75,7 +94,7 @@
                     <div class="date">24/MAR/2020</div>
                     <div class="sub-title">Fascículo - 1</div>
                     <div class="title">O MUDO CHISMOSO</div>
-                    <div class="link-download">Haga clic aquí para descargar</div>
+                    <div class="link-download">Clic aquí para descargar</div>
                   </h2>
                 </a>
               </div>
@@ -93,7 +112,7 @@
                     <div class="date">31/MAR/2020</div>
                     <div class="sub-title">Fascículo - 2</div>
                     <div class="title">ONOPOETOPÉIA</div>
-                    <div class="link-download">Haga clic aquí para descargar</div>
+                    <div class="link-download">Clic aquí para descargar</div>
                   </h2>
                 </a>
               </div>
