New version Fasciculo

--- a/es.html
+++ b/es.html
@@ -28,35 +28,100 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://es.ilhadasformigas.xyz/" />
     <meta property="og:title" content="Isla de hormigas" />
-    <meta property="og:description" content="Ensayo artístico de Ariel Gricio." />
+    <meta
+      property="og:description"
+      content="Ensayo artístico de Ariel Gricio."
+    />
     <!-- <meta property="og:image" content=""> -->
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://ilhadasformigas.xyz/" />
     <meta property="twitter:title" content="Isla de hormigas" />
-    <meta property="twitter:description" content="Ensayo artístico de Ariel Gricio." />
+    <meta
+      property="twitter:description"
+      content="Ensayo artístico de Ariel Gricio."
+    />
     <!-- <meta property="twitter:image" content=""> -->
     <link rel="stylesheet" href="./assets/normalize.min.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
 
     <!-- <FavIcons> -->
-    <link rel="apple-touch-icon" sizes="57x57" href="./favicon/img/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="./favicon/img/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="./favicon/img/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="./favicon/img/apple-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="./favicon/img/apple-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="./favicon/img/apple-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="./favicon/img/apple-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="./favicon/img/apple-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/img/apple-icon-180x180.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="./favicon/img/android-icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/img/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="./favicon/img/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/img/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="./favicon/img/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="./favicon/img/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="./favicon/img/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="./favicon/img/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="./favicon/img/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./favicon/img/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="./favicon/img/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="./favicon/img/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon/img/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="./favicon/img/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon/img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="./favicon/img/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon/img/favicon-16x16.png"
+    />
     <link rel="manifest" href="./favicon/img/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="./favicon/img/ms-icon-144x144.png" />
+    <meta
+      name="msapplication-TileImage"
+      content="./favicon/img/ms-icon-144x144.png"
+    />
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
@@ -71,14 +136,18 @@
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <div class="grid">
-      <div class="collumn-grid"><img class="bug" src="./img/up-bug-min.png" alt="isla de hormigas" /></div>
+      <div class="collumn-grid">
+        <img class="bug" src="./img/up-bug-min.png" alt="isla de hormigas" />
+      </div>
       <div class="collumn-grid">
         <div class="container">
           <nav
             style="top: 50px;
           position: relative;"
           >
-            <a href="index.html"><img src="./img/brazil-flag.png" alt="version en português"/></a>
+            <a href="index.html"
+              ><img src="./img/brazil-flag.png" alt="version en português"
+            /></a>
           </nav>
           <h1>isla<br />de<br />hormigas</h1>
           <ul>
@@ -103,9 +172,8 @@
               <div>
                 <a
                   class="download-fasciculo"
-                  href="#indisponivel"
+                  href="https://drive.google.com/file/d/1pCU6tJTpSpATsYYNKxJR8DXqv3n0UaQ-"
                   title="ONOPOETOPÉIA - indisponivel"
-                  onClick="alert('¡Este número estará disponible a partir del 31/03/2020, si prefiere registrarse y recibirlo en su correo electrónico!')"
                   target="_blank"
                 >
                   <h2>
@@ -120,7 +188,9 @@
           </ul>
         </div>
       </div>
-      <div class="collumn-grid"><img class="bug" src="./img/down-bug-min.png" alt="isla de hormigas" /></div>
+      <div class="collumn-grid">
+        <img class="bug" src="./img/down-bug-min.png" alt="isla de hormigas" />
+      </div>
     </div>
     <iframe
       src="https://docs.google.com/forms/d/e/1FAIpQLSdbiDWZZt-ThpFzKcpJdgupWIHmLHBr517qlA6vYjODDJkr2g/viewform?embedded=true"
@@ -131,7 +201,8 @@
     >
     <footer>
       <p>
-        Todo el contenido de este ensayo está escrito por Ariel Gricio. Puede difundirlo, pero cite la fuente, por favor. ;)
+        Todo el contenido de este ensayo está escrito por Ariel Gricio. Puede
+        difundirlo, pero cite la fuente, por favor. ;)
       </p>
     </footer>
   </body>
