--- a/index.html
+++ b/index.html
@@ -101,11 +101,12 @@
             </li>
             <li>
               <div>
+                <!-- onClick="alert('Esse Fascículo estará disponível a partir do dia 31/03/2020, se preferir cadastre-se e receba no seu email!')" -->
+                <!-- href="#indisponivel" -->
                 <a
                   class="download-fasciculo"
-                  href="#indisponivel"
+                  href="https://drive.google.com/file/d/1FBdE_qW6Y8RqqF2AOZSyOcLifseZAsbO"
                   title="ONOPOETOPÉIA - indisponivel"
-                  onClick="alert('Esse Fascículo estará disponível a partir do dia 31/03/2020, se preferir cadastre-se e receba no seu email!')"
                   target="_blank"
                 >
                   <h2>
