Fix title es page

--- a/es.html
+++ b/es.html
@@ -179,7 +179,7 @@
                   <h2>
                     <div class="date">31/MAR/2020</div>
                     <div class="sub-title">Fascículo - 2</div>
-                    <div class="title">ONOPOETOPÉIA</div>
+                    <div class="title">ONOPOETOPEYA</div>
                     <div class="link-download">Clic aquí para descargar</div>
                   </h2>
                 </a>
