--- a/es.html
+++ b/es.html
@@ -206,15 +206,32 @@
               <div>
                 <a
                   class="download-fasciculo"
-                  onClick="alert('Este número estará disponible a partir del 14/04/2020, si prefiere registrarse y recibirlo en su correo electrónico.')"
-                  href="#indisponivel"
-                  title="AMARGONAUTA - indisponivel"
+                  href="https://drive.google.com/file/d/1cJUPkiNo0UHS83UmeLDNjxxd9lDeGPIa/view?usp=sharing"
+                  title="AMARGONAUTA"
                   target="_blank"
                 >
                   <h2>
                     <div class="date">14/ABR/2020</div>
                     <div class="sub-title">Fascículo - 4</div>
                     <div class="title">AMARGONAUTA</div>
+                    <div class="link-download">Clic aquí para descargar</div>
+                  </h2>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div>
+                <a
+                  class="download-fasciculo"
+                  onClick="alert('Este número estará disponible a partir del 21/04/2020, si prefiere registrarse y recibirlo en su correo electrónico.')"
+                  href="#indisponivel"
+                  title="COMPENETRADAS - indisponivel"
+                  target="_blank"
+                >
+                  <h2>
+                    <div class="date">21/ABR/2020</div>
+                    <div class="sub-title">Fascículo - 5</div>
+                    <div class="title">COMPENETRADAS</div>
                     <div class="link-download">Clic aquí para descargar</div>
                   </h2>
                 </a>
