compenetradas/Oráculo oração oralouco

--- a/es.html
+++ b/es.html
@@ -206,7 +206,7 @@
               <div>
                 <a
                   class="download-fasciculo"
-                  href="https://drive.google.com/file/d/1cJUPkiNo0UHS83UmeLDNjxxd9lDeGPIa/view?usp=sharing"
+                  href="https://drive.google.com/file/d/1cJUPkiNo0UHS83UmeLDNjxxd9lDeGPIa"
                   title="AMARGONAUTA"
                   target="_blank"
                 >
@@ -223,15 +223,32 @@
               <div>
                 <a
                   class="download-fasciculo"
-                  onClick="alert('Este número estará disponible a partir del 21/04/2020, si prefiere registrarse y recibirlo en su correo electrónico.')"
-                  href="#indisponivel"
-                  title="COMPENETRADAS - indisponivel"
+                  href="https://drive.google.com/file/d/1ApaS0Hjqy5SFecBr6pQEq7Ews4dk-sFD"
+                  title="COMPENETRADAS"
                   target="_blank"
                 >
                   <h2>
                     <div class="date">21/ABR/2020</div>
                     <div class="sub-title">Fascículo - 5</div>
                     <div class="title">COMPENETRADAS</div>
+                    <div class="link-download">Clic aquí para descargar</div>
+                  </h2>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div>
+                <a
+                  class="download-fasciculo"
+                  onClick="alert('Este número estará disponible a partir del 28/04/2020, si prefiere registrarse y recibirlo en su correo electrónico.')"
+                  href="#indisponivel"
+                  title="ORÁCULO ORACIÓN ORALOCO - indisponivel"
+                  target="_blank"
+                >
+                  <h2>
+                    <div class="date">28/ABR/2020</div>
+                    <div class="sub-title">Fascículo - 6</div>
+                    <div class="title">ORÁCULO ORACIÓN ORALOCO</div>
                     <div class="link-download">Clic aquí para descargar</div>
                   </h2>
                 </a>
