--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <div>
                 <a
                   class="download-fasciculo"
-                  href="https://drive.google.com/file/d/1UrvnasgH7h6dIwYIj15it0bLQ3UqziST/view?usp=sharing"
+                  href="https://drive.google.com/file/d/1UrvnasgH7h6dIwYIj15it0bLQ3UqziST"
                   title="AMARGONAUTA"
                   target="_blank"
                 >
@@ -154,15 +154,32 @@
               <div>
                 <a
                   class="download-fasciculo"
-                  onClick="alert('Esse Fascículo estará disponível a partir do dia 21/04/2020, se preferir cadastre-se e receba no seu email!')"
-                  href="#indisponivel"
-                  title="COMPENETRADAS - indisponivel"
+                  href="https://drive.google.com/file/d/1xaVH0ufw2rbwP3XKTxJOsUmyzNGmJTvx"
+                  title="COMPENETRADAS"
                   target="_blank"
                 >
                   <h2>
                     <div class="date">21/ABR/2020</div>
                     <div class="sub-title">Fascículo - 5</div>
                     <div class="title">COMPENETRADAS</div>
+                    <div class="link-download">Clique aqui para baixar</div>
+                  </h2>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div>
+                <a
+                  class="download-fasciculo"
+                  onClick="alert('Esse Fascículo estará disponível a partir do dia 28/04/2020, se preferir cadastre-se e receba no seu email!')"
+                  href="#indisponivel"
+                  title="ORÁCULO ORAÇÃO ORALOUCO - indisponivel"
+                  target="_blank"
+                >
+                  <h2>
+                    <div class="date">28/ABR/2020</div>
+                    <div class="sub-title">Fascículo - 6</div>
+                    <div class="title">ORÁCULO ORAÇÃO ORALOUCO</div>
                     <div class="link-download">Clique aqui para baixar</div>
                   </h2>
                 </a>
