--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Language" content="pt-br" />
     <!-- Primary Meta Tags -->
-    <title>Ilhas das Formigas</title>
-    <meta name="title" content="Ilhas das Formigas" />
+    <title>Ilha das Formigas</title>
+    <meta name="title" content="Ilha das Formigas" />
     <meta name="description" content="Ensaio artistico de Ariel Gricio" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ilhadasformigas.xyz/" />
-    <meta property="og:title" content="Ilhas das Formigas" />
+    <meta property="og:title" content="Ilha das Formigas" />
     <meta property="og:description" content="Ensaio artistico de Ariel Gricio" />
     <!-- <meta property="og:image" content=""> -->
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://ilhadasformigas.xyz/" />
-    <meta property="twitter:title" content="Ilhas das Formigas" />
+    <meta property="twitter:title" content="Ilha das Formigas" />
     <meta property="twitter:description" content="Ensaio artistico de Ariel Gricio" />
     <!-- <meta property="twitter:image" content=""> -->
     <link rel="stylesheet" href="./assets/normalize.min.css" />
