--- a/es.html
+++ b/es.html
@@ -240,15 +240,32 @@
               <div>
                 <a
                   class="download-fasciculo"
-                  onClick="alert('Este número estará disponible a partir del 28/04/2020, si prefiere registrarse y recibirlo en su correo electrónico.')"
-                  href="#indisponivel"
-                  title="ORÁCULO ORACIÓN ORALOCO - indisponivel"
+                  href="https://drive.google.com/file/d/1RFTj0UveJE4Ikj4D_sU33YhFgqH0HDj3"
+                  title="ORÁCULO ORACIÓN ORALOCO"
                   target="_blank"
                 >
                   <h2>
                     <div class="date">28/ABR/2020</div>
                     <div class="sub-title">Fascículo - 6</div>
                     <div class="title">ORÁCULO ORACIÓN ORALOCO</div>
+                    <div class="link-download">Clic aquí para descargar</div>
+                  </h2>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div>
+                <a
+                  class="download-fasciculo"
+                  onClick="alert('Este número estará disponible a partir del 04/05/2020, si prefiere registrarse y recibirlo en su correo electrónico.')"
+                  href="#indisponivel"
+                  title="VIVO Y ENTERRADO - indisponivel"
+                  target="_blank"
+                >
+                  <h2>
+                    <div class="date">04/ABR/2020</div>
+                    <div class="sub-title">Fascículo - 7</div>
+                    <div class="title">VIVO Y ENTERRADO</div>
                     <div class="link-download">Clic aquí para descargar</div>
                   </h2>
                 </a>
