--- a/index.html
+++ b/index.html
@@ -171,15 +171,32 @@
               <div>
                 <a
                   class="download-fasciculo"
-                  onClick="alert('Esse Fascículo estará disponível a partir do dia 28/04/2020, se preferir cadastre-se e receba no seu email!')"
-                  href="#indisponivel"
-                  title="ORÁCULO ORAÇÃO ORALOUCO - indisponivel"
+                  href="https://drive.google.com/file/d/1rnpuRGmnY-JkchgnIgZjTXwoGqjG-oSS"
+                  title="ORÁCULO ORAÇÃO ORALOUCO"
                   target="_blank"
                 >
                   <h2>
                     <div class="date">28/ABR/2020</div>
                     <div class="sub-title">Fascículo - 6</div>
                     <div class="title">ORÁCULO ORAÇÃO ORALOUCO</div>
+                    <div class="link-download">Clique aqui para baixar</div>
+                  </h2>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div>
+                <a
+                  class="download-fasciculo"
+                  onClick="alert('Esse Fascículo estará disponível a partir do dia 04/05/2020, se preferir cadastre-se e receba no seu email!')"
+                  href="#indisponivel"
+                  title="VIVO E ENTERRADO - indisponivel"
+                  target="_blank"
+                >
+                  <h2>
+                    <div class="date">28/ABR/2020</div>
+                    <div class="sub-title">Fascículo - 7</div>
+                    <div class="title">VIVO E ENTERRADO</div>
                     <div class="link-download">Clique aqui para baixar</div>
                   </h2>
                 </a>
