--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                   target="_blank"
                 >
                   <h2>
-                    <div class="date">28/ABR/2020</div>
+                    <div class="date">04/MAI/2020</div>
                     <div class="sub-title">Fascículo - 7</div>
                     <div class="title">VIVO E ENTERRADO</div>
                     <div class="link-download">Clique aqui para baixar</div>
